# nav_novamob

./: CMakeLists.txt  README.md  nav_plugins.xml  navigation.yaml  navigation_sim.yaml  package.xml
behavior_trees/: nav2_w_stop_resume_tree copy.xml  nav2_w_stop_resume_tree.xml  nav2_w_stop_resume_tree_debug.xml
config/: my_config.yaml  navigation.yaml
include/nav_novamob/plugins/: always_true_condition.hpp  closed_hand_condition.hpp  open_hand_condition.hpp  resume_nav_node.hpp  stop_robot_action.hpp
src/: ClosedHandNode.cpp  always_true_condition.cpp  closed_hand_condition.cpp  goal_reached_condition.cpp  open_hand_condition.cpp  resume_nav_node.cpp  stop_robot_action.cpp
